# opcua-edge

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
benchmarks/: benchmark_main.c  benchmark_pump.c  benchmark_report.c  benchmark_scenarios.c
benchmarks/baselines/: events_200.csv  events_400.csv  read_1100_tags.csv  read_9900_tags.csv  write_200_writable.csv
benchmarks/raspi-8gb/: events_400.csv  read_1100_tags.csv  write_200_writable.csv
db/: schema.sql
include/: edge_address_space.h  edge_benchmark.h  edge_config.h  edge_events.h  edge_limits.h  edge_modbus.h  edge_runtime.h  edge_server.h  edge_store.h  edge_time.h  edge_types.h  edge_value.h
packaging/: Dockerfile  entrypoint.sh
packaging/systemd/: opcua-edge.service
scripts/: asan.sh  build.sh  leak-check.sh  opcua-console.sh  run-local.sh
src/: edge_address_space.c  edge_config.c  edge_events.c  edge_modbus.c  edge_runtime.c  edge_server.c  edge_store.c  edge_time.c  main.c
templates/: desalination_plant.edge
tests/integration/: test_address_space.c  test_benchmark_persist.c  test_events.c  test_modbus.c  test_store.c
tests/modbus_sim/: test_simulator.py
tests/unit/: test_config.c  test_value.c
tools/modbus_sim/: README.md  edge_template.py  modbus_sim.py  plant_values.py  profiles.py  requirements.txt
